fix gap in nav bar
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@22295 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_header.scss
+++ b/src/main/resources/scss/_header.scss
@@ -118,7 +118,8 @@
 	}
 
 	.content {
-
+		height: 57px;
+		cursor: pointer;
 		width: initial;
 		max-width: 400px;
 		margin-right: 0;
